tests/negative/Test18.sp
(* Testing arrays *)
max:Int(a:Int[]){
	i:Int = 2;
	a.get_array()[i + 3 + c];
	return 2;
}